updated about and notes title

--- a/about/index.html
+++ b/about/index.html
@@ -84,16 +84,14 @@
     this website
   </h4>
   <div class = "text">
-  this website is pure html & css, no javascript (except for my mini webapps) or anything. i do this
+  this website is pure html & css, minimal javascript. i do this
     for a couple of reasons, but mainly due to compatibility, speed and
     simplicity.
   </div>
 
   <div class = "text">
     on here i mainly just share things i find interesting. this includes projects im working on,
-    thoughts on what im reading/studying and just things that i wish to keep for reference.
-    i'd like to eventually have a personal knowledge base, similar to something like
-    <a href = "https://notes.andymatuschak.org/About_these_notes?stackedNotes=zCMhncA1iSE74MKKYQS5PBZ"><u>Andy Matuschak's working notes.</u></a>
+    thoughts on what im reading/studying and just things that i wish to keep for reference. This is usually done in my <a href="../notes"> <u>notes.</u></a>
   </div>
 
   <div class = "text">
