--- a/notes/index.html
+++ b/notes/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Two-Panel Knowledge Desk</title>
+  <title>Mahdi's Notes</title>
   <style>
     :root {
       --background-light: #f4f4f4;
