--- a/notes/index.html
+++ b/notes/index.html
@@ -65,6 +65,8 @@
       padding: 40px 40px 160px;
       box-sizing: border-box;
       width: 100%;
+      max-width: 720px;
+      margin: 0 auto;
     }
 
     .box {
