another mobile fix

--- a/notes/index.html
+++ b/notes/index.html
@@ -34,8 +34,8 @@
       font-family: monospace;
       background: var(--background-light);
       color: var(--text-light);
-      height: 100%;
-      overflow: hidden;
+      width: 100%;
+      font-size: inherit;
     }
 
     .layout {
