another mobile fix

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     Mahdi's Site
   </title>
   <link rel="stylesheet" href="css/style.css">
-  <meta name="Mahdi Hassen's Website" content="">
+  <meta name="Mahdi's' Website" content="">
 
 
 <body>
