--- a/notes/index.html
+++ b/notes/index.html
@@ -37,12 +37,15 @@
       color: var(--text-light);
       width: 100%;
       font-size: inherit;
+      height: 100vh;
+      overflow: hidden;
     }
 
     .layout {
       display: flex;
       height: 100vh;
       width: 100vw;
+      position: relative;
     }
 
     .main-area {
