fixed some HTML

--- a/about/index.html
+++ b/about/index.html
@@ -11,39 +11,31 @@
 
 
 
-<div class="mainContent">
-
-  <h3>
-
-    <a href = "../">.../about</a>
-
-  </h3>
-
-
+<div class="navigation">
   <ul>
 
 
     <li>
-      <div class = "mainContent me">
-      <a href ="mailto:mahdi.hassen@torontomu.ca" >email</a>
+      <div class ="button-aqua">
+      <a href ="mailto:mhassen@uwaterloo.ca" >email</a>
       </div>
     </li>
 
     <li>
-      <div class = "mainContent projects">
+      <div class ="button-lime">
       <a href ="../Resume.pdf" target="_blank" rel="nofollow noopener">resume</a>
         </div>
 
     </li>
 
     <li>
-      <div class = "mainContent blog">
+      <div class ="button-red">
       <a href ="https://www.linkedin.com/in/mahdi-hassen/" target="_blank" rel="nofollow noopener">linkedin</a>
       </div>
     </li>
 
     <li>
-      <div class = "mainContent ep">
+      <div class ="button-purple">
       <a href ="https://github.com/MahdiHassen" target="_blank" rel="nofollow noopener">github</a>
         </div>
     </li>
@@ -58,23 +50,15 @@
   <h4>
     me
   </h4>
-  <div class = "text"> I'm currently a master's computer/electrical engineering student at the university of
-    waterloo. I graduated from my bachelor's in computer engineering from toronto metropolitan university (TMU) in april 2025.
-  </div>
+  <p> I'm currently a master's computer/electrical engineering student at the university of waterloo. I graduated from my bachelor's in computer engineering from toronto metropolitan university (TMU) in april 2025.
+  </p>
 
-  <div class = "text">
-    i'm interested in a lot of things, but generally i love all things
-    computers. things like computer architecture, soc design & embedded
-    systems really peak my interest. outside of engineering i read a lot of
-    philosophy, which i try to talk about in my <a href="../blog"> <u>blog</u></a>.
-  </div>
+  <p>
+    i'm interested in a lot of things, but generally i love all things computers. things like computer architecture, soc design & embedded systems really peak my interest. outside of engineering i read a lot of philosophy, which i try to talk about in my <a href="../blog"> <u>blog</u></a>.
+  </p>
 
-  <div class = "text">
-
-
-
-  </div>
-
+    <p>  </p>
+<!--  |__|    -->
 
   <div class = "text">
     if you need to get to me, email is the  quickest way: mhassen@uwaterloo.ca
@@ -107,12 +91,9 @@
   <h4>
     my blog
   </h4>
-  <div class = "text">
-    remind me to fill in this section when i've written some more, but i hope to
-    get a blog out every 2 months or so. i currently write my blogs in straight in the html (yes it sucks), but i'll
-    probably
-    transition to some markdown to html converter or static site gen after I get my css setup correctly.
-  </div>
+  <p>
+    remind me to fill in this section when i've written some more, but i hope to get a blog out every 2 months or so. i currently write my blogs in straight in the html (yes it sucks), but i'll probably transition to some markdown to html converter or static site gen after I get my css setup correctly.
+  </p>
 
 
 
