--- a/notes/index.html
+++ b/notes/index.html
@@ -228,7 +228,7 @@
   <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-  <div class="mainContent">
+  <div class="navigation">
     <h3>
       <a href="../">.../notes</a>
     </h3>
