--- a/projects/index.html
+++ b/projects/index.html
@@ -10,7 +10,7 @@
 
 
 
-<div class = "mainContent">
+<div class = "navigation">
 
   <h3>
 
@@ -21,7 +21,7 @@
   <ul>
 
     <li>
-      <div class = "mainContent projects">
+      <div class = "navigation button-lime">
         <a href ="#list-of-projs">full list of projects </a>
       </div>
 
@@ -29,7 +29,7 @@
 
 
     <li>
-      <div class = "mainContent ep">
+      <div class = "navigation button-purple">
         <a href ="https://github.com/MahdiHassen" target="_blank" rel="nofollow noopener">github</a>
       </div>
     </li>
@@ -52,20 +52,20 @@
 
     <li>
       <a>capstone: fishingARound</a>
-      <span class="programming">programming</span>
+      <span class="tag-light-blue">programming</span>
       <p>completed</p>
     </li>
 
     <li>
       <a href="https://github.com/MahdiHassen/Cortex-M3Paint">m3 paint: embedded drawing application</a>
-      <span class="programming">programming</span>
+      <span class="tag-light-blue">programming</span>
       <p>completed</p>
     </li>
 
 
     <li>
       <a href="https://github.com/MahdiHassen/CV-Skin-Lesion-Classification">computer vision classification of skin lesions</a>
-      <span class="programming">programming</span>
+      <span class="tag-light-blue">programming</span>
       <p>completed</p>
     </li>
 
@@ -73,31 +73,31 @@
 
       <a href="https://github.com/MahdiHassen/VHDL-Pong">VGA Pong w/FPGA</a>
 
-      <span class="religion">engineering</span>
+      <span class="tag-yellow">engineering</span>
       <p>completed</p>
     </li>
 
     <li>
       <a href="mega-meow-mart">mega meow-mart</a>
-      <span class="programming">programming</span> <span class="short">game development</span>
+      <span class="tag-light-blue">programming</span> <span class="tag-blue">game development</span>
       <p>completed: top 10% in gmtk2024</p>
     </li>
 
     <li>
       <a href="https://github.com/MahdiHassen/Goatboy" target="_blank" rel="nofollow noopener">goatboy: gameboy emulator core</a>
-      <span class="programming">programming</span>
+      <span class="tag-light-blue">programming</span>
       <p>completed</p>
     </li>
 
     <li>
       <a href="https://github.com/MahdiHassen/RISC-V-Processor" target="_blank" rel="nofollow noopener">risc-v cpu</a>
-      <span class="religion">engineering</span>
+      <span class="tag-yellow">engineering</span>
       <p>completed</p>
     </li>
 
     <li>
       <a href="https://github.com/MahdiHassen/Chip8-Interperter" target="_blank" rel="nofollow noopener">chip-8 interpreter</a>
-      <span class="programming">programming</span>
+      <span class="tag-light-blue">programming</span>
       <p>completed</p>
     </li>
 
