--- a/index.html
+++ b/index.html
@@ -15,33 +15,29 @@
 
 <h3>Mahdi Hassen</h3>
 
+<div class="navigation">
+  <div class="button-aqua">
+    <a href="about/">about</a>
+  </div>
 
+  <div class="button-lime">
+    <a href="projects/">projects</a>
+  </div>
 
+  <div class="button-red">
+    <a href="blog">blog</a>
+  </div>
 
-<div class="mainContent me">
-  <a href="about/">about</a>
-</div>
-
-<div class="mainContent projects">
-  <a href="projects/">projects</a>
-</div>
-
-
-
-<div class="mainContent blog">
-  <a href="blog">blog</a>
-</div>
-
-<div class = "mainContent ep">
-  <a href ="notes">notes</a>
+  <div class = "button-purple">
+    <a href ="notes">notes</a>
+  </div>
 </div>
 
 
 </body>
-
-  <meta property="og:title" content="">
+  <meta property="og:title" content="Mahdi's Page">
   <meta property="og:type" content="">
-  <meta property="og:url" content="">
+  <meta property="og:url" content="mahdis.site">
   <meta property="og:image" content="">
   <meta property="og:image:alt" content="">
 
