blog re-org: thanks hafsa

--- a/about/index.html
+++ b/about/index.html
@@ -8,13 +8,16 @@
 </head>
 <body>
 
+<div class="header">
+  <h3>
 
+    <a href = "../">.../about</a>
 
+  </h3>
+</div>
 
 <div class="navigation">
   <ul>
-
-
     <li>
       <div class ="button-aqua">
       <a href ="mailto:mhassen@uwaterloo.ca" >email</a>
@@ -41,6 +44,7 @@
     </li>
 
   </ul>
+</div>
 
 
 <div class="sectionContent" >
@@ -60,34 +64,35 @@
     <p>  </p>
 <!--  |__|    -->
 
-  <div class = "text">
+  <p>
     if you need to get to me, email is the  quickest way: mhassen@uwaterloo.ca
-  </div>
+  </p>
 
   <h4>
     this website
   </h4>
-  <div class = "text">
+  <p>
   this website is pure html & css, minimal javascript. i do this
     for a couple of reasons, but mainly due to compatibility, speed and
     simplicity.
-  </div>
+  </p>
 
-  <div class = "text">
+  <p>
     on here i mainly just share things i find interesting. this includes projects im working on,
     thoughts on what im reading/studying and just things that i wish to keep for reference. This is usually done in my <a href="../notes"> <u>notes.</u></a>
-  </div>
+  </p>
 
-  <div class = "text">
+  <p>
     i sometimes share small webapps i make for my own use. i remove them when i no longer have a use for them.
-  </div>
+  </p>
 
-  <div class = "text">
+  <p>
     its changed quite a bit since its inception, but i originally based the design of this
     website on something i saw at www.brutalistwebsites.com. unfortunately, i
     can't find the original inspiration anymore, but if you know the original
     website please shoot me an email so i can give them credit.
-  </div>
+  </p>
+
   <h4>
     my blog
   </h4>
@@ -96,8 +101,7 @@
   </p>
 
 
-
-
+</div>
 </div>
 
 </body>
