wow about page updated!

--- a/about/index.html
+++ b/about/index.html
@@ -54,50 +54,40 @@
   <h4>
     me
   </h4>
-  <p> I'm currently a master's computer/electrical engineering student at the university of waterloo. I graduated from my bachelor's in computer engineering from toronto metropolitan university (TMU) in april 2025.
+  <p> i'm currently a master's computer/electrical engineering student at the university of waterloo where i'm researching real time hardware/software systems. i earned my bachelors of engineering in June 2025.
   </p>
 
   <p>
-    i'm interested in a lot of things, but generally i love all things computers. things like computer architecture, soc design & embedded systems really peak my interest. outside of engineering i read a lot of philosophy, which i try to talk about in my <a href="../blog"> <u>blog</u></a>.
+    i'm interested in a lot of things, but generally i love all things computers. things like computer architecture, soc design & embedded systems really peak my interest. outside of engineering i read a lot of philosophy, which i try to talk about in my <a href="../blog"> <u>blog</u></a>. i also enjoy astronomy and building telescopes.
   </p>
 
     <p>  </p>
 <!--  |__|    -->
 
   <p>
-    if you need to get to me, email is the  quickest way: mhassen@uwaterloo.ca
+    if you need to get to me, email is the quickest way: mhassen@uwaterloo.ca
   </p>
 
   <h4>
     this website
   </h4>
   <p>
-  this website is pure html & css, minimal javascript. i do this
-    for a couple of reasons, but mainly due to compatibility, speed and
-    simplicity.
+  this website is pure html & css. i do this for a couple of reasons, but mainly due to compatibility, speed and simplicity.i am also not a web developer, so it's probably fine.
   </p>
 
   <p>
-    on here i mainly just share things i find interesting. this includes projects im working on,
-    thoughts on what im reading/studying and just things that i wish to keep for reference. This is usually done in my <a href="../notes"> <u>notes.</u></a>
+    on here i mainly just share things i find interesting. this includes projects im working on, thoughts on what im reading/studying and just things that i wish to keep for reference. i sometimes share small webapps i make for my own use, but i remove them when i no longer have a use for them.
   </p>
 
   <p>
-    i sometimes share small webapps i make for my own use. i remove them when i no longer have a use for them.
-  </p>
-
-  <p>
-    its changed quite a bit since its inception, but i originally based the design of this
-    website on something i saw at www.brutalistwebsites.com. unfortunately, i
-    can't find the original inspiration anymore, but if you know the original
-    website please shoot me an email so i can give them credit.
+    its changed quite a bit since its inception, but i originally based the design of this website on something i saw at www.brutalistwebsites.com. unfortunately, i can't find the original inspiration anymore, but if you know the original website please shoot me an email so i can give them credit.
   </p>
 
   <h4>
     my blog
   </h4>
   <p>
-    remind me to fill in this section when i've written some more, but i hope to get a blog out every 2 months or so. i currently write my blogs in straight in the html (yes it sucks), but i'll probably transition to some markdown to html converter or static site gen after I get my css setup correctly.
+    i mainly write about things i'm thinking about, or that i've read. i don't research too much before i write, so i may get some things wrong. if you disagree with something feel free to email me, and i'd be happy to chat. i also write about technical things, but i don't post about them too often since they get long and hard to format. anyway, i hope to get a blog out every 2 months or so.
   </p>
 
 
