added overleaf lazily

--- a/about/index.html
+++ b/about/index.html
@@ -26,7 +26,7 @@
 
     <li>
       <div class ="button-lime">
-      <a href ="../Resume.pdf" target="_blank" rel="nofollow noopener">resume</a>
+      <a href ="https://www.overleaf.com/read/yjyrnfzbgjbf#6b4570" target="_blank" rel="nofollow noopener">resume</a>
         </div>
 
     </li>
