added bookshelf and some books I've read

--- a/404/index.html
+++ b/404/index.html
@@ -16,7 +16,7 @@
 
 <div class="sectionContent">
 
-  <a> I've got nothing for you here</a>
+  <a> I've got nothing for you here, WIP</a>
 
 
 </div>
