--- a/index.html
+++ b/index.html
@@ -29,9 +29,23 @@
   </div>
 
   <div class = "button-purple">
-    <a href ="notes">notes</a>
+  <a href ="notes">notes</a>
   </div>
+
+<div class = "button-orange">
+  <a href ="https://anomail.co/">anomail(y)</a>
 </div>
+
+<div class = "button-green">
+  <a href ="bookshelf">bookshelf</a>
+</div>
+
+<div class = "button-navy">
+  <a href ="404">server</a>
+</div>
+
+</div>
+
 
 </body>
   <meta property="og:title" content="Mahdi's Page">
