--- a/bookshelf/index.html
+++ b/bookshelf/index.html
@@ -63,6 +63,7 @@
         <li>Deep Work (5.5/10)</li>
         <li>Atomic Habits (7/10)</li>
         <li>Contagious: why things catch on (7.5/10)</li>
+        <li>Piranesi (8/10)</li>
         <li>Once a Liar (6.5/10)</li>
         <li>Start with why (6/10)</li>
         <li>The hating game (1/10)</li>
@@ -79,7 +80,7 @@
     <details class="shelf" id="reading" open>
       <summary>reading</summary>
       <ul>
-        <li>The Crisis of Narrative</li>
+        <li>The Crisis of narration</li>
         <li>Network Calculus</li>
 
       </ul>
