--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 </div>
 
 <div class = "button-navy">
-  <a href ="404">astrophotography</a>
+  <a href ="astro">astrophotography</a>
 </div>
 
 </div>
