updated about this website

--- a/about/index.html
+++ b/about/index.html
@@ -83,6 +83,10 @@
     its changed quite a bit since its inception, but i originally based the design of this website on something i saw at www.brutalistwebsites.com. unfortunately, i can't find the original inspiration anymore, but if you know the original website please shoot me an email so i can give them credit.
   </p>
 
+  <p>
+  you can navigate this site by pressing/clicking the names of the pages. For example, in the <a href="../astro"> <u>astrophotography</u></a> section, pressing the header "../astrophotography" will send you to the home page.
+  </p>
+
   <h4>
     my blog
   </h4>
