fixed metatags and stuff

--- a/about/index.html
+++ b/about/index.html
@@ -3,7 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>about</title>
+  <title>About - Mahdi Hassen</title>
+  <meta name="description" content="About Mahdi Hassen.">
+  <link rel="canonical" href="https://mahdis.site/about/">
+  <meta property="og:title" content="About - Mahdi Hassen">
+  <meta property="og:description" content="About Mahdi Hassen.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://mahdis.site/about/">
   <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
