--- a/art/index.html
+++ b/art/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Art - Mahdi Hassen</title>
+  <meta name="description" content="Art by Mahdi Hassen.">
+  <link rel="canonical" href="https://mahdis.site/art/">
+  <meta property="og:title" content="Art - Mahdi Hassen">
+  <meta property="og:description" content="Art by Mahdi Hassen.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://mahdis.site/art/">
   <style>
 
     body {
