--- a/astro/index.html
+++ b/astro/index.html
@@ -3,7 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>astrophotography</title>
+  <title>Astrophotography - Mahdi Hassen</title>
+  <meta name="description" content="Astrophotography by Mahdi Hassen.">
+  <link rel="canonical" href="https://mahdis.site/astro/">
+  <meta property="og:title" content="Astrophotography - Mahdi Hassen">
+  <meta property="og:description" content="Astrophotography by Mahdi Hassen.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://mahdis.site/astro/">
   <link rel="stylesheet" href="../css/style.css">
 
   <style>
