--- a/bookshelf/index.html
+++ b/bookshelf/index.html
@@ -3,8 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>bookshelf</title>
-  <!-- Re-use your global stylesheet -->
+  <title>Bookshelf - Mahdi Hassen</title>
+  <meta name="description" content="Bookshelf by Mahdi Hassen.">
+  <link rel="canonical" href="https://mahdis.site/bookshelf/">
+  <meta property="og:title" content="Bookshelf - Mahdi Hassen">
+  <meta property="og:description" content="Bookshelf by Mahdi Hassen.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://mahdis.site/bookshelf/">
   <link rel="stylesheet" href="../css/style.css">
   <!-- Page-specific styles kept here so you don’t have to touch the main CSS file -->
   <style>
