--- a/bookshelf/reccommend/index.html
+++ b/bookshelf/reccommend/index.html
@@ -3,8 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Recommend a Book - Mahdi Hassen</title>
+  <meta name="description" content="Recommend a book to Mahdi Hassen.">
+  <link rel="canonical" href="https://mahdis.site/bookshelf/reccommend/">
+  <meta property="og:title" content="Recommend a Book - Mahdi Hassen">
+  <meta property="og:description" content="Recommend a book to Mahdi Hassen.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://mahdis.site/bookshelf/reccommend/">
   <link rel="stylesheet" href="../../css/style.css">
-</title>
   <style>
     /* simple centering and spacing */
     .recommend-form{
