--- a/flashcards/index.html
+++ b/flashcards/index.html
@@ -3,7 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
-  <title>Flashcard App</title>
+  <title>Flashcards - Mahdi Hassen</title>
+  <meta name="description" content="Flashcard viewer by Mahdi Hassen.">
+  <link rel="canonical" href="https://mahdis.site/flashcards/">
+  <meta property="og:title" content="Flashcards - Mahdi Hassen">
+  <meta property="og:description" content="Flashcard viewer by Mahdi Hassen.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://mahdis.site/flashcards/">
   <style>
     body {
       font-family: monospace, Arial, sans-serif;
