--- a/index.html
+++ b/index.html
@@ -1,15 +1,30 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html lang="en">
 
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>
-    Mahdi's Site
-  </title>
+  <title>Mahdi Hassen</title>
+  <meta name="description" content="Mahdi Hassen's personal website.">
+  <meta name="author" content="Mahdi Hassen">
+  <link rel="canonical" href="https://mahdis.site/">
   <link rel="stylesheet" href="css/style.css">
-  <meta name="Mahdi's' Website" content="">
 
+  <meta property="og:title" content="Mahdi Hassen">
+  <meta property="og:description" content="Mahdi Hassen's personal website.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://mahdis.site/">
+  <meta property="og:site_name" content="Mahdi Hassen">
+
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:title" content="Mahdi Hassen">
+  <meta name="twitter:description" content="Mahdi Hassen's personal website.">
+
+  <link rel="icon" href="/favicon.ico" sizes="any">
+  <link rel="icon" href="/icon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="/icon.png">
+  <meta name="theme-color" content="#fafafa">
+</head>
 
 <body>
 
@@ -48,19 +63,4 @@
 
 
 </body>
-  <meta property="og:title" content="Mahdi's Page">
-  <meta property="og:type" content="">
-  <meta property="og:url" content="mahdis.site">
-  <meta property="og:image" content="">
-  <meta property="og:image:alt" content="">
-
-  <link rel="icon" href="/favicon.ico" sizes="any">
-  <link rel="icon" href="/icon.svg" type="image/svg+xml">
-  <link rel="apple-touch-icon" href="icon.png">
-
-  <meta name="theme-color" content="#fafafa">
-
-<body>
-</body>
-
 </html>
