--- a/projects/index.html
+++ b/projects/index.html
@@ -3,7 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>projects</title>
+  <title>Projects - Mahdi Hassen</title>
+  <meta name="description" content="Projects by Mahdi Hassen.">
+  <link rel="canonical" href="https://mahdis.site/projects/">
+  <meta property="og:title" content="Projects - Mahdi Hassen">
+  <meta property="og:description" content="Projects by Mahdi Hassen.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://mahdis.site/projects/">
   <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
