--- a/projects/mega-meow-mart/index.html
+++ b/projects/mega-meow-mart/index.html
@@ -3,7 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>projects</title>
+  <title>Mega Meow Mart - Mahdi Hassen</title>
+  <meta name="description" content="Project by Mahdi Hassen.">
+  <link rel="canonical" href="https://mahdis.site/projects/mega-meow-mart/">
+  <meta property="og:title" content="Mega Meow Mart - Mahdi Hassen">
+  <meta property="og:description" content="Project by Mahdi Hassen.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://mahdis.site/projects/mega-meow-mart/">
   <link rel="stylesheet" href="../../css/style.css">
 </head>
 <body>
