--- a/search/index.html
+++ b/search/index.html
@@ -2,10 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Mahdi's Search</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="">
-  <meta name="robots" content="index, follow">
+  <title>Search - Mahdi Hassen</title>
+  <meta name="description" content="Resource search by Mahdi Hassen.">
+  <link rel="canonical" href="https://mahdis.site/search/">
+  <meta property="og:title" content="Search - Mahdi Hassen">
+  <meta property="og:description" content="Resource search by Mahdi Hassen.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://mahdis.site/search/">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
