--- a/404/index.html
+++ b/404/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>404 error</title>
+  <title>404 - Page Not Found</title>
+  <meta name="robots" content="noindex">
   <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
