--- a/notes/index.html
+++ b/notes/index.html
@@ -3,7 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Mahdi's Notes</title>
+  <title>Notes - Mahdi Hassen</title>
+  <meta name="description" content="Notes by Mahdi Hassen.">
+  <link rel="canonical" href="https://mahdis.site/notes/">
+  <meta property="og:title" content="Notes - Mahdi Hassen">
+  <meta property="og:description" content="Notes by Mahdi Hassen.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://mahdis.site/notes/">
   <style>
     :root {
       --background-light: #f4f4f4;
