--- a/projects/richard/index.html
+++ b/projects/richard/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Richard - Mahdi Hassen</title>
+  <meta name="description" content="Project by Mahdi Hassen.">
+  <link rel="canonical" href="https://mahdis.site/projects/richard/">
+  <meta property="og:title" content="Richard - Mahdi Hassen">
+  <meta property="og:description" content="Project by Mahdi Hassen.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://mahdis.site/projects/richard/">
   <style>
 
     body {
