--- a/about/index.html
+++ b/about/index.html
@@ -53,6 +53,12 @@
         </div>
     </li>
 
+    <li>
+      <div class = "button-orange">
+        <a href="#" id="dark-mode-toggle">dark mode</a>
+      </div>
+    </li>
+
   </ul>
 </div>
 
@@ -108,5 +114,6 @@
 </div>
 </div>
 
+<script src="/js/dark-mode.js"></script>
 </body>
 </html>
