--- a/astro/index.html
+++ b/astro/index.html
@@ -112,6 +112,13 @@
         <a href="/cameras">skyview</a>
       </div>
     </li>
+
+    <li>
+      <div class = "button-orange">
+        <a href="#" id="dark-mode-toggle">dark mode</a>
+      </div>
+    </li>
+
   </ul>
 </div>
 
@@ -181,5 +188,6 @@
   </div>
 </div>
 
+<script src="/js/dark-mode.js"></script>
 </body>
 </html>
