--- a/bookshelf/reccommend/index.html
+++ b/bookshelf/reccommend/index.html
@@ -69,6 +69,7 @@
       <span id="formResult" style="margin-left:0.5rem;"></span>
     </div>
   </form>
+<script src="/js/dark-mode.js"></script>
 </body>
 <script>
   const form = document.getElementById("recommendForm");
