--- a/index.html
+++ b/index.html
@@ -48,10 +48,6 @@
   <a href ="notes">notes</a>
   </div>
 
-<div class = "button-orange">
-  <a href ="https://anomail.co/">anomail(y)</a>
-</div>
-
 <div class = "button-green">
   <a href ="bookshelf">bookshelf</a>
 </div>
@@ -60,8 +56,13 @@
   <a href ="astro">astrophotography</a>
 </div>
 
+  <div class = "button-orange">
+    <a href="#" id="dark-mode-toggle">dark mode</a>
+  </div>
+
 </div>
 
+<script src="js/dark-mode.js"></script>
 
 </body>
 </html>
