--- a/notes/index.html
+++ b/notes/index.html
@@ -493,5 +493,6 @@
     enableResize(document.getElementById('resize1'), document.getElementById('panel1'));
     enableResize(document.getElementById('resize2'), document.getElementById('panel2'));
   </script>
+<script src="/js/dark-mode.js"></script>
 </body>
 </html>
