--- a/projects/index.html
+++ b/projects/index.html
@@ -44,6 +44,12 @@
       </div>
     </li>
 
+    <li>
+      <div class = "button-orange">
+        <a href="#" id="dark-mode-toggle">dark mode</a>
+      </div>
+    </li>
+
   </ul>
 
 </div>
